deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dso-demo-java
  labels:
    app: dso-demo-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dso-demo-java
  template:
    metadata:
      labels:
        app: dso-demo-java
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - name: dso-demo-java
          image: harbor.apps.c6.numerique-interieur.com/msa-crtad/java-demo:certification-delorme
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080  # Exposes container port
